load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["common.go"],
    importpath = "github.com/bojand/ghz/internal",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/helloworld:go_default_library",
        "//internal/sleep:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",
        "@org_golang_google_grpc//reflection:go_default_library",
    ],
)
