load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["printer.go"],
    importpath = "github.com/bojand/ghz/printer",
    visibility = ["//visibility:public"],
    deps = [
        "//runner:go_default_library",
        "@com_github_alecthomas_template//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["printer_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//runner:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
