load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/bojand/ghz/cmd/ghz-web",
    visibility = ["//visibility:private"],
    deps = [
        "//web/api:go_default_library",
        "//web/config:go_default_library",
        "//web/database:go_default_library",
        "//web/router:go_default_library",
    ],
)

go_binary(
    name = "ghz-web",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
