load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "main.go",
    ],
    importpath = "github.com/bojand/ghz/cmd/ghz",
    visibility = ["//visibility:private"],
    deps = [
        "//printer:go_default_library",
        "//runner:go_default_library",
        "@com_github_alecthomas_kingpin//:go_default_library",
        "@com_github_jinzhu_configor//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
        "@org_uber_go_zap//zapcore:go_default_library",
    ],
)

go_binary(
    name = "ghz",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
