load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "greeter.pb.go",
        "greeter_server.go",
    ],
    importpath = "github.com/bojand/ghz/internal/helloworld",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_golang_protobuf//proto:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//stats:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)
