load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "server.go",
        "service.pb.go",
    ],
    importpath = "github.com/bojand/ghz/internal/sleep",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_gogo_protobuf//proto:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)
