load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "export.go",
        "histogram.go",
        "info.go",
        "ingest.go",
        "options.go",
        "project.go",
        "report.go",
    ],
    importpath = "github.com/bojand/ghz/web/api",
    visibility = ["//visibility:public"],
    deps = [
        "//runner:go_default_library",
        "//web/model:go_default_library",
        "@com_github_alecthomas_template//:go_default_library",
        "@com_github_labstack_echo//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "delete_test.go",
        "export_test.go",
        "histogram_test.go",
        "info_test.go",
        "ingest_test.go",
        "options_test.go",
        "project_test.go",
        "report_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//runner:go_default_library",
        "//web/database:go_default_library",
        "//web/model:go_default_library",
        "@com_github_labstack_echo//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
