load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "database.go",
        "detail.go",
        "histogram.go",
        "options.go",
        "project.go",
        "report.go",
    ],
    importpath = "github.com/bojand/ghz/web/database",
    visibility = ["//visibility:public"],
    deps = [
        "//web/model:go_default_library",
        "@com_github_jinzhu_gorm//:go_default_library",
        "@com_github_jinzhu_gorm//dialects/mysql:go_default_library",
        "@com_github_jinzhu_gorm//dialects/postgres:go_default_library",
        "@com_github_jinzhu_gorm//dialects/sqlite:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "database_test.go",
        "detail_test.go",
        "histogram_test.go",
        "options_test.go",
        "project_test.go",
        "report_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//runner:go_default_library",
        "//web/model:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
