load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "detail.go",
        "histogram.go",
        "model.go",
        "options.go",
        "project.go",
        "report.go",
        "status.go",
    ],
    importpath = "github.com/bojand/ghz/web/model",
    visibility = ["//visibility:public"],
    deps = [
        "//runner:go_default_library",
        "@com_github_bojand_hri//:go_default_library",
        "@com_github_jinzhu_gorm//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "detail_test.go",
        "histogram_test.go",
        "options_test.go",
        "project_test.go",
        "report_test.go",
        "status_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//runner:go_default_library",
        "@com_github_jinzhu_gorm//:go_default_library",
        "@com_github_jinzhu_gorm//dialects/sqlite:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
